k8s-go-demo-app/app-depl-multi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two-containers
  labels:
    app: multi
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: multi
  volumes:
  - name: html
    emptyDir: {}
  template:
    metadata:
      labels:
        app: multi
    spec:
      containers:
        - name: 1st
          image: nginx
          volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html
        - name: 2nd
          image: debian
          volumeMounts:
          - name: html
            mountPath: /html
            command: ["/bin/sh"]
            args: ["-c", "while true; do date >> /html/index.html; sleep 1; done"]
