k8s-go-demo-app/app-multicontainer.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app-two-containers
  labels:
    app: multi
spec:
  volumes:
  - name: html
    emptyDir: {}
  containers:
  - name: 1st
    image: nginx
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
  - name: 2nd
    image: debian
    volumeMounts:
    - name: html
      mountPath: /html
    command: ["/bin/sh"]
    args: ["-c", "while true; do date >> /html/index.html; sleep 1; done"]
