k8s-go-demo-app/app-secret-env.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app-secret-env
spec:
  containers:
  - name: mycontainer
    image: redis
  restartPolicy: Never
