k8s-go-demo-app/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-multicontainer
spec:
  selector:
    app: multi
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
