k8s-go-demo-app/service-LB.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-lb
spec:
  type: LoadBalancer
  selector:
    app: multi
  ports:
    - port: 80
      targetPort: 80
