k8s-go-demo-app/service-nodePort.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  type: NodePort
  selector:
    app: multi
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
